--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -87,24 +87,28 @@ steps:
           --instance-group-zone=$${ZONE} \
           --global
 
-        # Wait for new instances to be healthy before touching old ones
         echo "Waiting for new instances to become healthy..."
         HEALTHY=false
         for i in {1..36}; do
-          # Check if new MIG is healthy
-          NEW_STATUS=$(gcloud compute backend-services get-health demo-backend --global \
-            --format="get(status.healthStatus[].healthState)") || true
-          echo "Health check attempt $i: $${NEW_STATUS}"
+          # Check health status specifically for new MIG
+          HEALTH_CHECK=$(gcloud compute backend-services get-health demo-backend \
+            --global \
+            --format="json" | grep "healthState" | grep -c "HEALTHY" || true)
           
-          if [[ "$${NEW_STATUS}" == *"HEALTHY"* ]]; then
-            # Wait and verify again to ensure stability
-            sleep 15
-            NEW_STATUS=$(gcloud compute backend-services get-health demo-backend --global \
-              --format="get(status.healthStatus[].healthState)") || true
+          echo "Health check attempt $i: $${HEALTH_CHECK}/2 instances healthy"
+          
+          if [ "$${HEALTH_CHECK}" -eq "2" ]; then
+            echo "Both instances are healthy, waiting 30 seconds to confirm stability..."
+            sleep 30
             
-            if [[ "$${NEW_STATUS}" == *"HEALTHY"* ]]; then
+            # Verify again after wait
+            HEALTH_CHECK=$(gcloud compute backend-services get-health demo-backend \
+              --global \
+              --format="json" | grep "healthState" | grep -c "HEALTHY" || true)
+            
+            if [ "$${HEALTH_CHECK}" -eq "2" ]; then
               HEALTHY=true
-              echo "✓ New instances confirmed healthy"
+              echo "✓ New instances confirmed stable"
               break
             fi
           fi
@@ -112,52 +116,27 @@ steps:
         done
 
         if [[ "$${HEALTHY}" == "true" ]]; then
-          echo "New instances are confirmed healthy, proceeding with cleanup..."
-          
           if [[ -n "$${BLUE_MIG}" ]]; then
-            echo "Removing old MIG from backend service..."
+            echo "New instances stable, removing old MIG from backend..."
             gcloud compute backend-services remove-backend demo-backend \
               --instance-group=$${BLUE_MIG} \
               --instance-group-zone=$${ZONE} \
               --global --quiet || true
             
-            sleep 15  # Wait to ensure traffic is routing to new MIG
+            sleep 10
             
             echo "Deleting old MIG..."
             gcloud compute instance-groups managed delete $${BLUE_MIG} \
               --zone=$${ZONE} --quiet || true
             
-            if [[ $${BLUE_MIG} == green-mig-* ]]; then
-              OLD_TEMPLATE="it-${BLUE_MIG#green-mig-}"
-              echo "Deleting old template..."
-              gcloud compute instance-templates delete $${OLD_TEMPLATE} --quiet || true
-            fi
-          fi
-
-          # Cleanup any other old MIGs
-          OLD_MIGS=$(gcloud compute instance-groups managed list \
-            --zones=$${ZONE} \
-            --format="get(name)" | grep -v "$${GREEN_MIG}" | grep -v "$${BLUE_MIG}") || true
-
-          if [[ -n "$${OLD_MIGS}" ]]; then
-            echo "Cleaning up additional old MIGs..."
-            echo "$${OLD_MIGS}" | while read -r OLD_MIG; do
-              if [[ -n "$${OLD_MIG}" ]]; then
-                gcloud compute instance-groups managed delete $${OLD_MIG} \
-                  --zone=$${ZONE} --quiet || true
-                
-                if [[ $${OLD_MIG} == green-mig-* ]]; then
-                  OLD_TEMPLATE="it-${OLD_MIG#green-mig-}"
-                  gcloud compute instance-templates delete $${OLD_TEMPLATE} --quiet || true
-                fi
-              fi
-            done
+            OLD_TEMPLATE="it-${BLUE_MIG#green-mig-}"
+            echo "Deleting old template..."
+            gcloud compute instance-templates delete $${OLD_TEMPLATE} --quiet || true
           fi
         else
           echo "! Warning: New instances not healthy after maximum attempts"
-          echo "! Rolling back - keeping old MIG active"
+          echo "! Rolling back deployment"
           
-          # Remove unhealthy new MIG
           gcloud compute backend-services remove-backend demo-backend \
             --instance-group=$${GREEN_MIG} \
             --instance-group-zone=$${ZONE} \
